about campagin section added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header>
       <!-- navbar section -->
       <nav class="bg-[#15803D]">
-        <div class="flex justify-between items-center w-10/12 mx-auto py-4">
+        <div class="flex justify-between items-center w-11/12 mx-auto py-4">
           <div class="flex gap-2 items-center">
             <div class="dropdown dropdown-start lg:hidden">
               <div tabindex="0" role="button">
@@ -92,6 +92,29 @@
         </div>
         
       </section>
+
+      <!-- main section -->
+      <main class="bg-[#f0fdf4]">
+        <div class="w-11/12 mx-auto border-2 border-red-400 mb-12">
+          <h2 class="text-center text-3xl font-semibold">Choose Your Trees</h2>
+        </div>
+
+        <!-- about campaign section -->
+         <section class="w-7/12 mx-auto my-10">
+          <h2 class="text-3xl text-[#1F2937] text-center font-semibold">About the Campaign</h2>
+          <div class="flex gap-5 justify-center items-center pt-7 pb-15">
+            <img class="w-[400px]" src="assets/about.png" alt="">
+            <div class="text-[15px]">
+              <p class="text-[#1F2937] pb-5">Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
+              <ul class="list-disc pl-7">
+                <li>Restoration of natural habitats</li>
+                <li>Improvement of air quality</li>
+                <li>Support for local communities</li>
+              </ul>
+            </div>
+          </div>
+         </section>
+      </main>
     </header>
   </body>
 </html>
