our impact section added

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         </div>
 
         <!-- about campaign section -->
-         <section class="w-7/12 mx-auto my-10">
+        <section class="w-7/12 mx-auto py-15">
           <h2 class="text-3xl text-[#1F2937] text-center font-semibold">About the Campaign</h2>
-          <div class="flex gap-5 justify-center items-center pt-7 pb-15">
+          <div class="flex gap-5 justify-center items-center pt-7">
             <img class="w-[400px]" src="assets/about.png" alt="">
             <div class="text-[15px]">
               <p class="text-[#1F2937] pb-5">Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
@@ -113,7 +113,28 @@
               </ul>
             </div>
           </div>
-         </section>
+        </section>
+
+        <!-- our impact section -->
+        <section class="bg-[#CFF0DC] py-15">
+          <div class="w-11/12 mx-auto">
+            <h2 class="text-3xl text-[#1F2937] font-semibold text-center">Our Impact</h2>
+            <div class="flex justify-between items-center gap-10 pt-10">
+              <div class="bg-white w-full h-[130px] flex flex-col items-center justify-center">
+                <h4 class="text-[#15803D] text-2xl font-semibold">500K+</h4>
+                <p class="text-[#1F2937]">Trees Planted</p>
+              </div>
+              <div class="bg-white w-full h-[130px] flex flex-col items-center justify-center">
+                <h4 class="text-[#15803D] text-2xl font-semibold">120+</h4>
+                <p class="text-[#1F2937]">Communities Involved</p>
+              </div>
+              <div class="bg-white w-full h-[130px] flex flex-col items-center justify-center">
+                <h4 class="text-[#15803D] text-2xl font-semibold">30+</h4>
+                <p class="text-[#1F2937]">Countries Reached</p>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </header>
   </body>
