--- a/index.html
+++ b/index.html
@@ -96,9 +96,26 @@
 
     <!-- main section -->
     <main class="bg-[#f0fdf4]">
-      <div class="w-11/12 mx-auto border-2 border-red-400 mb-12">
+      <section class="w-11/12 mx-auto border-2 border-red-400 pt-15">
           <h2 class="text-center text-3xl font-semibold">Choose Your Trees</h2>
-      </div>
+          <div class="flex justify-between">
+            <!-- Category div -->
+            <div id="categories-container" class="w-[18%] h-[500px]">
+              <h3 class="text-xl font-semibold pb-3">Categories</h3>
+              <button class="text-[#1F2937] hover:bg-[#15803D] hover:text-white rounded-sm w-full text-start p-2">All Trees</button>
+            </div>
+            
+            <!-- all tress div -->
+            <div class="w-[60%] h-[500px] border-2 border-violet-700">
+
+            </div>
+
+            <!-- cart div -->
+            <div class="w-[18%] h-[500px] border-2 border-teal-950">
+
+            </div>
+          </div>
+      </section>
 
       <!-- about campaign section -->
       <section class="w-7/12 mx-auto py-15">
@@ -168,5 +185,7 @@
       </section>
     </footer>
     
+
+    <script src="script.js"></script>
   </body>
 </html>
