category click function added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div id="categories-container" class="w-[15%]">
             <h3 class="text-xl font-semibold pb-3">Categories</h3>
             <button
-              class="text-[#1F2937] hover:bg-[#15803D] hover:text-white rounded-sm w-full text-start p-2"
+              onclick="loadAllTree()" class="text-[#1F2937] hover:bg-[#15803D] hover:text-white rounded-sm w-full text-start p-2"
             >
               All Trees
             </button>
