--- a/index.html
+++ b/index.html
@@ -222,6 +222,22 @@
       </section>
     </footer>
 
+
+    <!-- Open the modal using ID.showModal() method -->
+    <dialog id="plant_modal" class="modal">
+    <div class="modal-box">
+        <div id="details-container">
+          
+        </div>
+        <div class="modal-action">
+        <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+        </form>
+        </div>
+    </div>
+    </dialog>
+
     <script src="script.js"></script>
   </body>
 </html>
