--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@
           </div>
 
           <!-- cart div -->
-          <div class="w-[15%] h-[500px] border-2 border-teal-950"></div>
+          <div class="w-[15%] h-[500px] bg-white rounded-lg">
+            <div id="cart-detail-container" class="p-3 space-y-2">
+              <h2 class="text-lg font-semibold">Your Cart</h2>
+              
+            </div>
+          </div>
         </div>
       </section>
 
