total price functionality added

--- a/index.html
+++ b/index.html
@@ -124,9 +124,15 @@
 
           <!-- cart div -->
           <div class="w-[15%] h-[500px] bg-white rounded-lg">
-            <div id="cart-detail-container" class="p-3 space-y-2">
+            <div class="p-3 space-y-2">
               <h2 class="text-lg font-semibold">Your Cart</h2>
               
+              <div id="cart-detail-container" class="space-y-2"></div>
+
+              <div id="total-price-count">
+                <!-- total price part -->
+              </div>
+
             </div>
           </div>
         </div>
