loading spinner functionality added

--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
     <main class="bg-[#f0fdf4]">
       <section class="w-11/12 mx-auto pt-15">
         <h2 class="text-center text-3xl font-semibold">Choose Your Trees</h2>
+
+        <section id="spinner" class="flex justify-center items-center py-10 hidden">
+          <span class="loading loading-bars loading-xl"></span>
+        </section>
+
         <div class="flex justify-between mt-5">
           <!-- Category div -->
           <div id="categories-container" class="w-[15%]">
